# vscoq

./: .gitignore  .gitmodules  .mailmap  .travis.yml  .vscodeignore  CHANGELOG.md  CoqProtocol.md  LICENSE  License.txt  Makefile  README.md  TODO.md  default.nix  flake.nix  package-lock.json  package.json  shared.webpack.config.js  shell.nix  tsconfig.base.json  tsconfig.json  webpack.client.config.js  webpack.config.js  webpack.html_views.config.js  webpack.server.config.js
.github/workflows/: cd-opam.yml  cd.yml  ci.yml  publish-extension.yml  publish-server.yml
.yarn/releases/: yarn-sources.cjs
client/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .vscodeignore  CHANGELOG.md  CoqProtocol.md  License.txt  README.md  VSMarkup.css  coq.configuration.json  gulpfile.js  package-lock.json  package.json  tsconfig.json  tsd.json  typings.json  wdio.conf.ts  yarn.nix
client/goal-view-ui/: .prettierrc  package.json  yarn.nix
client/goal-view-ui/src/: App.css  App.tsx  types.ts
client/media/: books.md  install.md  style.css  troubleshooting.md
client/pp-display/: .eslintrc.json  package.json  tsconfig.json  vite.config.ts
client/pp-display/src/: main.tsx  pp-box.tsx  pp-break.tsx  pp.tsx  types.ts  utilities.ts
client/search-ui/: .eslintrc.json  package.json  vite.config.ts  yarn.nix
client/search-ui/src/: App.css  App.tsx  types.ts
client/snippets/: coq.json
client/src/: AnnotatedText.ts  CoqDocument.ts  CoqDocumentListener.ts  CoqLanguageServer.ts  CoqProject.ts  CoqView.ts  DecProvider.ts  Decorations.ts  EditorAssist.ts  Highlights.ts  HoverProvider.ts  HtmlCoqView.ts  HtmlLtacProf.ts  MDCoqView.ts  QuickFixProvider.ts  RangeSet.ts  SimpleCoqView.ts  Snippets.ts  StatusBar.ts  WebDocumentProvider.ts  WebServer.ts  client.ts  configuration.ts  extension.ts  manualChecking.ts  nodejs-async.ts  prettify-symbols-mode.ts  protocol.ts  provider.ts  text-util.ts
client/src/HtmlView/: Coq.html  StateModel.js  StateModel.ts  model.ts  ui-util.ts
client/src/completion/: LemmaCompletionProvider.ts
client/src/panels/: DocumentStateViewProvider.ts  GoalPanel.ts  SearchViewProvider.ts
client/src/protocol/: types.ts
client/src/test/: runTest.ts  tsconfig.json  (+1 more)
client/syntax/: coq-project.language-configuration.json  coq-project.tmLanguage.json  coq.language-configuration.json  coq.tmLanguage  coq.tmLanguage.json
client/syntaxes/: coq.tmLanguage
client/test/: extension.test.ts  tsconfig.json
client/testFixture/: basic.v  delegate_proof.v  warn.v
client/typings/: tsd.d.ts
coqtopw/: .gitignore  Program.cs  Signals.cs  StreamJoinIO.cs  TraceStream.cs  coqtopw.csproj  coqtopw.sln
coqtopw/Properties/: AssemblyInfo.cs
coqtopw/UnitTests/: UnitTests.csproj  cmdline tests.cs  packages.config
dev/doc/: release.md
docs/: developers.md  protocol.md
gallina/: README.md  coq.configuration.json  package.json  vsc-extension-quickstart.md
gallina/syntaxes/: coq.tmLanguage
html_views/: .gitignore  gulpfile.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
html_views/src/: Coq.html  LtacProf.html  jqueryui.d.ts_  ltacprof.ts  model.ts  refs.d.ts
html_views/static/: proof-view.css
html_views/typings/: colResizable.jquery.d.ts  index.d.ts  tbltree.jquery.d.ts
language-server/: Makefile  README.md  build-windows-platform.bat  coq  dune  dune-project  dune-workspace  make-release.sh  vscoq-language-server.opam
language-server/dm/: README.md  completionItem.ml  completionItems.ml  completionSuggester.ml  completionSuggester.mli  delegationManager.ml  delegationManager.mli  document.ml  document.mli  documentManager.ml  documentManager.mli  dune  executionManager.ml  executionManager.mli  log.ml  log.mli  parTactic.ml  parTactic.mli  priorityManager.ml  rawDocument.ml  rawDocument.mli  scheduler.ml  scheduler.mli  searchQuery.ml  searchQuery.mli  types.ml  vscoqtop_proof_worker.ml  vscoqtop_tactic_worker.ml
language-server/dm/data/: command.ml  dune  tactic.ml
language-server/etc/: dune  version_parser.ml
language-server/language/: dune  hover.ml  hover.mli
language-server/lsp/: dune  extProtocol.ml  jsonRpc.ml  jsonRpc.mli  lspData.ml  lspData.mli  lspEncode.ml  lspEncode.mli  printing.mli  proofState.ml  protocol.ml
language-server/misc/: log.ml  log.mli  version_parser.ml
language-server/protocol/: dune  extProtocol.ml  lspWrapper.ml  printing.ml  printing.mli  proofState.ml  proofState.mli  settings.ml
language-server/rocq-worker/: API.ml  API.mli  completionSuggester.ml  delegationManager.ml  delegationManager.mli  dune  hover.ml  hover.mli  parTactic.ml  parTactic.mli  printing.ml  proofState.ml  searchQuery.ml  searchQuery.mli  types.ml  vscoqtop_proof_worker.ml  vscoqtop_tactic_worker.ml
language-server/sel/: README.md  dune  sel.ml  sel.mli
language-server/tests/: common.ml  d_tests.ml  dm_tests.ml  dune  em_tests.ml  goals.ml  s_tests.ml  sel_tests.ml
language-server/tests/interactive/: _CoqProject  restart.v  test_delegation.v  test_noproof.v  test_par.v
language-server/vscoqtop/: README.md  args.ml  args.mli  dune  lspManager.ml  lspManager.mli  vscoqtop.ml
lib/: coq-proto.ts  index.ts  protocol.ts  tsconfig.json
scripts/: make-static-suggestions.py
server/: .gitignore  License.txt  package-lock.json  package.json  tsconfig.json  tsd.json  typings.json  webpack.config.js
server/src/: AsyncQueue.ts  CancellationSignal.ts  CoqProject.ts  FeedbackSync.ts  Mutex.ts  RichPP.ts  STM.ts  STMSentence.ts  STMState.ts  Sentence.ts  SentenceCollection.ts  SentenceSemantics.ts  coq-parser.ts  coq-proto.ts  coq-xml.ts  coqtop.ts  document.ts  protocol.ts  sentences.ts  server.ts  text-util.ts
server/test/: CoqProject.ts  Mutex.test.ts_  STM.ts  Scopes.ts  SentenceCollection.ts  coq-parser.ts  coqtop.8.5.ts  coqtop.8.6.ts  coqtop.8.7.ts  deserialize.8.5.ts  deserialize.8.6.ts  deserialize.8.7.ts  error-parsing.ts  index.ts  text.ts
server/typings/: pegjs.d.ts  tsd.d.ts
snippets/: coq.json
syntaxes/: .gitignore  coq.tmLanguage.yaml
tests/samples/: diff.v  shelve-and-give-up.v  word-wrapping.v
(+204 files in other folders)
