opam-version: "2.0"
name: "vscoq-language-server"
maintainer: "Enrico Tassi <enrico.tassi@inria.fr>"
authors: [ "Enrico Tassi" "Maxime Denes" ]
license: "LGPL-2.1-or-later"
homepage: "https://github.com/coq-community/vscoq"
bug-reports: "https://github.com/coq-community/vscoq/issues"
dev-repo: "git+https://github.com/coq-community/vscoq"

build: [
  [ "sed" "-e" "/vendored_dirs coq/d" "-ibak" "dune" ]
  [ "dune" "build" "-p" "vscoq-language-server" "--display=short"] 
]
depends: [
  "coq-core" {= "dev"}
  "coq-stdlib" {= "dev"}
  "yojson"
  "ocamlfind"
  "ppx_inline_test"
  "ppx_assert"
  "ppx_sexp_conv"
  "ppx_yojson_conv"
  "ppx_deriving"
  "sexplib"
  "ppx_yojson_conv"
  "uri"
]
synopsis: "VSCoq language server"
description: """
LSP based language server for Coq and its VSCoq user interface
"""
