(library
 (name dm)
 (public_name vscoq-language-server.dm)
 (modules delegationManager parTactic documentManager document executionManager scheduler types searchQuery completionItems completionSuggester priorityManager Log)
 (flags -rectypes)
 (libraries coq-core.sysinit coq-core.vernac coq-core.parsing sel lsp))

(executable
 (name vscoqtop_proof_worker)
 (public_name vscoqtop_proof_worker.opt)
 (modules vscoqtop_proof_worker)
 (flags -rectypes -linkall)
 (package vscoq-language-server)
 (libraries coq-core.sysinit coq-core.tactics dm lsp))

(executable
 (name vscoqtop_tactic_worker)
 (public_name vscoqtop_tactic_worker.opt)
 (modules vscoqtop_tactic_worker)
 (flags -rectypes -linkall)
 (package vscoq-language-server)
 (libraries coq-core.sysinit coq-core.tactics dm lsp))
