(library
 (name dm)
 (public_name vscoq-language-server.dm)
 (modules :standard \ vscoqtop_proof_worker vscoqtop_tactic_worker)
 (libraries base coq-core.sysinit coq-core.vernac coq-core.parsing lsp sel protocol language))

(executable
 (name vscoqtop_proof_worker)
 (public_name vscoqtop_proof_worker.opt)
 (modules vscoqtop_proof_worker)
 (flags -linkall)
 (package vscoq-language-server)
 (libraries coq-core.sysinit coq-core.tactics lsp dm protocol))

(executable
 (name vscoqtop_tactic_worker)
 (public_name vscoqtop_tactic_worker.opt)
 (modules vscoqtop_tactic_worker)
 (flags -linkall)
 (package vscoq-language-server)
 (libraries coq-core.sysinit coq-core.tactics lsp dm protocol))
