(executable
 (name vscoqtop)
 (public_name vscoqtop)
 (flags -linkall)
 (package vscoq-language-server)
 (preprocess (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~coq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries misc protocol coq-core.lib coq-core.clib coq-core.boot coq-core.sysinit sel yojson jsonrpc dm lsp rocq_worker))
